# thinking-injection

./: README.md  __log__.py  install_develop.sh  install_local_thinking.sh  pyproject.toml  requirements.txt  test-requirements.txt  thinking-dependencies.txt
.github/workflows/: ci.yml  examples.yml  publish.yml
calculator/: README.md  __log__.py  __setup__.py  app.py  setup.sh  test.sh
calculator/calc/model/: node.py  parser.py
calculator/calc/operators/: impl.py  protocol.py
test/: run_all.py  test_dependencies.py  util.py
test/injection/: class_fixtures.py  test_dependencies.py  test_implementations.py  test_requirements.py  test_typeset.py
test/injection/fixtures/: class_fixtures.py
test/injection/fixtures/subpkg/: class_subfixtures.py
test/injection/registry/: test_dependencies.py  test_implementations.py  test_requirements.py
test/programming/: run_all.py  test_lifecycle.py  test_serialization.py
thinking_injection/: cloneable.py  context.py  dependencies.py  discovery.py  implementations.py  injectable.py  interfaces.py  lifecycle.py  requirements.py  typeset.py
thinking_injection/common/: dependencies.py  exceptions.py  implementations.py  index.py
thinking_injection/context/: common.py  protocol.py  simple.py
thinking_injection/context/configurable/: configurator.py  impl.py  phase.py
thinking_injection/registry/: delegating.py  protocol.py  simple.py
thinking_injection/registry/customizable/: customizer.py  protocol.py
thinking_programming/: collectable.py
